[gd_scene load_steps=36 format=3 uid="uid://dsjy4rmciwslg"]

[ext_resource type="Script" path="res://Enemies/Crow/Fireball/Fireball.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dh7q3knvln0ep" path="res://Enemies/Crow/Fireball/Fireball_export_New animation.png" id="2"]
[ext_resource type="AudioStream" uid="uid://3pojhg3w1ha4" path="res://Enemies/Crow/Fireball/fireballNoise.wav" id="3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_oqsgj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u8h3i"]
atlas = ExtResource("2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q48u"]
atlas = ExtResource("2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvxg3"]
atlas = ExtResource("2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_va684"]
atlas = ExtResource("2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0knr"]
atlas = ExtResource("2")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhkiu"]
atlas = ExtResource("2")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dhd8"]
atlas = ExtResource("2")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikxrj"]
atlas = ExtResource("2")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_egj67"]
atlas = ExtResource("2")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2mh0"]
atlas = ExtResource("2")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnv8x"]
atlas = ExtResource("2")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0x27"]
atlas = ExtResource("2")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6bu5"]
atlas = ExtResource("2")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk2mj"]
atlas = ExtResource("2")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bblxk"]
atlas = ExtResource("2")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyn7s"]
atlas = ExtResource("2")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ggj3"]
atlas = ExtResource("2")
region = Rect2(0, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7em63"]
atlas = ExtResource("2")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoqk0"]
atlas = ExtResource("2")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_egqi0"]
atlas = ExtResource("2")
region = Rect2(300, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_shy1h"]
atlas = ExtResource("2")
region = Rect2(0, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld2ea"]
atlas = ExtResource("2")
region = Rect2(100, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlxik"]
atlas = ExtResource("2")
region = Rect2(200, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_51xx2"]
atlas = ExtResource("2")
region = Rect2(300, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd3pq"]
atlas = ExtResource("2")
region = Rect2(0, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2ys6"]
atlas = ExtResource("2")
region = Rect2(100, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqbe6"]
atlas = ExtResource("2")
region = Rect2(200, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bevqj"]
atlas = ExtResource("2")
region = Rect2(300, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h861s"]
atlas = ExtResource("2")
region = Rect2(0, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x30lm"]
atlas = ExtResource("2")
region = Rect2(100, 700, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_73m4y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8h3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q48u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvxg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va684")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0knr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhkiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dhd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikxrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egj67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2mh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnv8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0x27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6bu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk2mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bblxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyn7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ggj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7em63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoqk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egqi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shy1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld2ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlxik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51xx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd3pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2ys6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqbe6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bevqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h861s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x30lm")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[node name="Fireball" type="Area3D"]
script = ExtResource("1")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
shape = SubResource("SphereShape3D_oqsgj")

[node name="Lifespan" type="Timer" parent="."]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
billboard = 1
texture_filter = 0
frames = SubResource("SpriteFrames_73m4y")
playing = true

[node name="Fire" type="AudioStreamPlayer3D" parent="."]
process_mode = 1
stream = ExtResource("3")
volume_db = -20.0
autoplay = true

[connection signal="area_shape_entered" from="." to="." method="_on_Fireball_area_shape_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Fireball_body_shape_entered"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
